<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:id="@+id/cv"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:contentPadding="8dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/location" />

            <TextView
                android:id="@+id/tvLocationResult"
                android:layout_width="250dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/diarytime" />

            <TextView
                android:id="@+id/tvTimeResult"
                android:layout_width="250dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSubject"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="10dp"
                android:text="@string/subject" />

            <TextView
                android:id="@+id/tvSubjectResult"
                android:layout_width="250dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>